# psd_customization

./: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js  setup.py
psd_customization/: __init__.py  hooks.py  modules.txt  patches.txt  tasks.py
psd_customization/config/: accounts.py  desktop.py  docs.py  fitness_world.py  ultimate_art.py
psd_customization/doc_events/: batch.py  defaults.py  payment_entry.py  salary_slip.py  sales_invoice.py  stock_entry.py  subscription.py
psd_customization/fitness_world/api/: gym_fee.py  gym_member.py  gym_membership.py  gym_subscription.py  gym_subscription_item.py  salary_slip.py  test_trainer_allocation.py  trainer_allocation.py
psd_customization/fixtures/: custom_docperm.json  custom_field.json  property_setter.json
psd_customization/overrides/: stock_entry.py
psd_customization/public/: build.json
psd_customization/public/css/: barcode.css  (+2 more)
psd_customization/utils/: __init__.py  datetime.py  fp.py  test_datetime.py
src/: MemberDashboard.vue  SubscriptionDashboard.vue  TrainingSchedule.vue  index.js
src/components/: CurrentSubscriptionItem.vue  CurrentSubscriptions.vue  DashboardItem.vue  Field.vue  FieldLink.vue  MemberDashboard.vue
src/frappe-components/: index.js  subscription-selector.js
src/scripts/: gym_member.js  gym_subscription.js  index.js  label_printer.js  purchase_invoice.js  salary_slip.js  salary_structure.js  sales-invoice.js  sales_invoice.js
src/utils/: colors.js  datetime.js  frappe-async.js  index.js  transform.js
(+191 files in other folders)
