[project]
name = "psd_customization"
authors = [
    { name = "Libermatic LLP", email = "info@libermatic.com"}
]
description = "Customizations for PSD SELF"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "toolz~=0.12.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
black = "==20.8b1"

[tool.black]
line-length = 88
